fix: include extension in build

--- a/methodology/package.json
+++ b/methodology/package.json
@@ -7,12 +7,12 @@
     "pkg": "pkg ./package.json && sh ./bin/post-compile.sh",
     "lint": "eslint ./src",
     "format": "prettier -w ./src",
-    "build": "webpack && cp -r extension ./build/",
+    "build": "webpack",
     "watch": "webpack watch",
     "dev": "electron ./reload.js",
     "start": "electron .",
-    "pack": "DEBUG=electron-builder electron-builder build --dir",
-    "dist": "DEBUG=electron-builder electron-builder build -l",
+    "pack": "electron-builder build --dir",
+    "dist": "electron-builder build -l",
     "postinstall": "electron-builder install-app-deps"
   },
   "bin": "./build/guardoni-cli.js",
