--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^27.0.3",
     "@types/nconf": "^0.10.1",
     "@types/node": "^16.11.15",
+    "@types/prettier": "^2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.4.5",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "tsconfig-paths": "^3.12.0",
