--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@types/eslint": "^8.2.1",
     "@types/node": "^16.11.15",
+    "@types/prettier": "^2",
     "eslint": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
+    "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
