--- a/shared/package.json
+++ b/shared/package.json
@@ -26,14 +26,17 @@
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^16.11.15",
+    "@types/prettier": "^2",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "fast-check": "^2.20.0",
     "fast-check-io-ts": "^0.5.0",
     "filemanager-webpack-plugin": "^6.1.7",
     "mini-css-extract-plugin": "^1.6.2",
+    "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "react-refresh-typescript": "^2.0.3",
     "style-loader": "^3.3.1",
