feat: better TS typing of Hub related stuff

--- a/services/tktrex/extension/tsconfig.json
+++ b/services/tktrex/extension/tsconfig.json
@@ -6,8 +6,9 @@
     "esModuleInterop": true,
     "jsx": "react",
     "module": "esnext",
-    "noEmit": true,
     "moduleResolution": "node",
+    "noEmit": true,
+    "noImplicitAny": true,
     "resolveJsonModule": true,
     "strict": true,
     "target": "es5",
