--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@types/lodash": "^4.14.178",
     "create-react-class": "^15.7.0",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nacl": "^0.1.3",
     "react": "^17.0.2",
