--- a/services/tktrex/extension/.eslintrc.json
+++ b/services/tktrex/extension/.eslintrc.json
@@ -48,6 +48,8 @@
     "comma-dangle": ["error", "always-multiline"],
     "indent": [2, 2],
     "quotes": [1, "single"],
-    "semi": [1, "always"]
+    "semi": [1, "always"],
+    "space-before-function-paren": [1, "never"],
+    "keyword-spacing": [1, { "before": true, "after": true }]
   }
 }
