--- a/services/tktrex/extension/tsconfig.json
+++ b/services/tktrex/extension/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitAny": true,
     "resolveJsonModule": true,
     "strict": true,
+    "strictNullChecks": true,
     "target": "es2015",
     "paths": {
       "@shared/*": ["../../../../shared/src/*"],
