--- a/services/tktrex/shared/package.json
+++ b/services/tktrex/shared/package.json
@@ -20,5 +20,8 @@
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "fp-ts": "^2.11.5"
   }
 }
