--- a/methodology/package.json
+++ b/methodology/package.json
@@ -12,6 +12,7 @@
     "dev": "electron ./reload.js",
     "start": "electron .",
     "pack": "electron-builder build --dir",
+    "dist:win": "electron-builder build -w",
     "dist": "electron-builder build -l",
     "postinstall": "electron-builder install-app-deps"
   },
