--- a/services/tktrex/shared/package.json
+++ b/services/tktrex/shared/package.json
@@ -3,12 +3,14 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "test": "jest",
-    "tdd": "jest --watch"
+    "tdd": "jest --watch",
+    "dump-parsed-data": "ts-node bin/dump-parsed-data.ts"
   },
   "devDependencies": {
     "@types/eslint": "^8",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.6",
+    "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
@@ -19,9 +21,13 @@
     "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4",
+    "yargs": "^17.3.1"
   },
   "dependencies": {
-    "fp-ts": "^2.11.5"
+    "@types/mongodb": "^4.0.7",
+    "fp-ts": "^2.11.5",
+    "mongodb": "^4.2.2"
   }
 }
