fix: add skipLibCheck because of mongo

--- a/services/tktrex/shared/tsconfig.json
+++ b/services/tktrex/shared/tsconfig.json
@@ -12,6 +12,7 @@
     "outDir": "./build",
     "resolveJsonModule": true,
     "strict": true,
+    "skipLibCheck": true,
     "target": "es2015",
     "paths": {
       "@shared/*": ["../../../../shared/src/*"]
