chore: config tuning

--- a/services/tktrex/shared/tsconfig.json
+++ b/services/tktrex/shared/tsconfig.json
@@ -30,6 +30,11 @@
   },
   "include": [
     "**/*.ts",
+    "**/*.js",
     "**/*.json"
+  ],
+  "exclude": [
+    "node_modules",
+    "build"
   ]
 }
