--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "avenger": "^7.0.1",
+    "axios": "^0.24.0",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
@@ -43,6 +44,8 @@
     "prettier": "^2.5.1",
     "ts-loader": "^9.2.6",
     "typelevel-ts": "^0.4.0",
-    "webpack": "^5.65.0"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   }
 }
