--- a/shared/package.json
+++ b/shared/package.json
@@ -11,10 +11,17 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "avenger": "^7.0.1",
+    "axios": "^0.24.0",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "ts-endpoint": "^2.0.0",
     "ts-io-error": "^2.0.0",
     "typelevel-ts": "^0.4.0",
@@ -26,6 +33,8 @@
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^16.11.14",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
