--- a/.github/workflows/methodology_pull_request.yml
+++ b/.github/workflows/methodology_pull_request.yml
@@ -37,6 +37,10 @@ jobs:
       - name: Lint code
         run: yarn lint
 
+      - name: Build extension
+        working-directory: ./extension
+        run: yarn build
+
       - name: Build
         run: yarn build
 
