ci: install deps inside extension before build

--- a/.github/workflows/methodology_pull_request.yml
+++ b/.github/workflows/methodology_pull_request.yml
@@ -39,7 +39,9 @@ jobs:
 
       - name: Build extension
         working-directory: ./extension
-        run: yarn build
+        run: |
+          yarn install
+          yarn build
 
       - name: Build
         run: yarn build
