feat: wip: browser/server parsing foundations

--- a/services/tktrex/shared/package.json
+++ b/services/tktrex/shared/package.json
@@ -29,6 +29,7 @@
     "@types/mongodb": "^4.0.7",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
+    "linkedom": "^0.13.0",
     "mongodb": "^4.2.2"
   }
 }
