--- a/services/tktrex/shared/package.json
+++ b/services/tktrex/shared/package.json
@@ -2,8 +2,8 @@
   "name": "tktrex-shared",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "test": "jest",
-    "tdd": "jest --watch",
+    "test": "jest --maxWorkers=8",
+    "tdd": "jest --watch --maxWorkers=8",
     "dump-parsed-data": "ts-node bin/dump-parsed-data.ts"
   },
   "devDependencies": {
