--- a/extension/package.json
+++ b/extension/package.json
@@ -53,16 +53,16 @@
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.2",
-    "webpack": "=2.1.0-beta.17",
+    "webpack": "^5.65.0",
     "webpack-combine-loaders": "^2.0.4",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-notifier": "^1.13.0",
+    "webpack-dev-server": "^4.7.2",
+    "webpack-notifier": "^1.15.0",
     "write-file-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "bs58": "^3.0.0",
     "cheerio": "^0.22.0",
     "classnames": "^2.3.1",
