--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -8,14 +8,18 @@
     "build": "tsc -b && webpack",
     "watch": "webpack serve",
     "lint": "eslint ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle:stats": "webpack-bundle-analyzer ./build/stats.json"
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
@@ -27,15 +31,13 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/styles": "^4.11.4",
     "@types/eslint": "^8.2.1",
     "@types/prettier": "^2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
-    "date-fns": "^2.28.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -47,6 +49,7 @@
     "ts-loader": "^9.2.6",
     "typelevel-ts": "^0.4.0",
     "webpack": "^5.65.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
   }
