--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/eslint": "^8.2.1",
-    "@types/node": "^16.11.14",
-    "@types/prettier": "^2",
+    "@types/node": "^16.11.19",
+    "@types/prettier": "^2.4.2",
     "eslint": "^8.6.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
