--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -32,12 +32,13 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.2.1",
-    "@types/prettier": "^2",
-    "@types/react": "^17.0.37",
+    "@types/node": "^16.11.19",
+    "@types/prettier": "^2.4.2",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
