--- a/shared/package.json
+++ b/shared/package.json
@@ -32,12 +32,12 @@
     "@types/copy-webpack-plugin": "^8.0.1",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
-    "@types/node": "^16.11.14",
-    "@types/react": "^17.0.37",
+    "@types/node": "^16.11.19",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
@@ -59,6 +59,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.8.0",
     "webpack": "^5.65.0",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1"
   }
 }
