refactor: renamed 'methodology' to 'guardoni'

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -8,11 +8,11 @@ on:
     paths:
       - "shared/**"
       - "extension/**"
-      - "methodology/**"
+      - "guardoni/**"
 
 defaults:
   run:
-    working-directory: methodology
+    working-directory: guardoni
 
 jobs:
   pull_request:
