--- a/methodology/package.json
+++ b/methodology/package.json
@@ -71,7 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "bufferutil": "^4.0.6",
-    "electron": "^16.0.5",
+    "electron": "16.0.6",
     "electron-builder": "^22.14.5",
     "electron-reloader": "^1.2.1",
     "eslint": "^8.6.0",
