--- a/extension/package.json
+++ b/extension/package.json
@@ -25,26 +25,25 @@
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.5.1",
     "dotenv": "^2.0.0",
     "eslint": "^8.6.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-promise": "^5",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.28.0",
     "glob": "^7.2.0",
     "mini-css-extract-plugin": "^2.4.5",
     "mocha": "^7.2.0",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
-    "style-loader": "^0.13.2",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.65.0",
     "webpack-combine-loaders": "^2.0.4",
     "webpack-dev-server": "^4.7.2",
-    "webpack-notifier": "^1.15.0",
-    "write-file-webpack-plugin": "^3.3.0"
+    "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
