ci: build extension from root

--- a/.github/workflows/methodology_pull_request.yml
+++ b/.github/workflows/methodology_pull_request.yml
@@ -39,8 +39,7 @@ jobs:
         run: yarn lint
 
       - name: Build extension
-        working-directory: ./extension
-        run: yarn build
+        run: yarn extension build
 
       - name: Build
         run: yarn build
