fix: version bump to 1.8.8 and icons with transparency for improved dark mode

--- a/extension/package.json
+++ b/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yttrex-extension",
-  "version": "1.8.7",
+  "version": "1.8.8",
   "description": "yttrex is the extension + backend for youtube algorithm analysis. This is part of the https://tracking.exposed umbrella project",
   "homepage": "https://youtube.tracking.exposed",
   "bugs": "https://github.com/tracking-exposed/yttrex/issues",
@@ -14,7 +14,7 @@
     "lint": "eslint ./ --quiet",
     "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r public/* ./build/",
     "start": "npm run build:watch:files",
-    "build:watch": "rimraf ./build && mkdir build && cp -r public/* ./build/ && cross-env webpack -w",
+    "build:watch": "rm -rf ./build && mkdir build && cp -r public/* ./build/ && cross-env webpack -w",
     "build:dist": "sh pack-extension.sh",
     "clean": "rm -rf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
