fix: extension build version for guardoni

--- a/extension/.env_template
+++ b/extension/.env_template
@@ -4,3 +4,4 @@
 # Demo server settings (ignored when building for production)
 DEMO_PORT=3000
 DEMO_HOST_NAME=localhost
+DATA_CONTRIBUTION_ENABLED=true
