--- a/extension/package.json
+++ b/extension/package.json
@@ -12,10 +12,11 @@
   },
   "scripts": {
     "lint": "eslint ./ --quiet",
-    "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r public/* ./build/",
     "start": "npm run build:watch:files",
+    "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r public/* ./build/",
     "build:watch": "rm -rf ./build && mkdir build && cp -r public/* ./build/ && cross-env webpack -w",
-    "build:dist": "sh pack-extension.sh",
+    "dist": "sh pack-extension.sh",
+    "dist:guardoni": "sh pack-extension-for-guardoni.sh",
     "clean": "rm -rf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
     "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
@@ -24,6 +25,7 @@
     "@types/mini-css-extract-plugin": "^2.4.0",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
+    "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^2.0.1",
     "css-loader": "^6.5.1",
     "dotenv": "^2.0.0",
@@ -33,7 +35,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
     "glob": "^7.2.0",
-    "mini-css-extract-plugin": "^2.4.5",
+    "mini-css-extract-plugin": "^2.4.6",
     "mocha": "^7.2.0",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
