--- a/extension/package.json
+++ b/extension/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^9.1.0",
