ci: build shared before build the extension in guardoni flow

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -40,6 +40,10 @@ jobs:
       - name: Lint code
         run: yarn lint
 
+      - name: Build shared
+        working-directory: ./
+        run: yarn shared build
+
       - name: Build extension
         working-directory: ./extension
         run: yarn build
