ci: build extension dist for guardoni

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -44,9 +44,11 @@ jobs:
         working-directory: ./
         run: yarn shared build
 
-      - name: Build extension
+      - name: Build extension for guardoni
         working-directory: ./extension
-        run: yarn build
+        run: |
+          yarn build
+          yarn dist:guardoni
 
       - name: Build
         run: yarn build
