fix: guardoni electron form ui (#274)

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -1,4 +1,4 @@
-name: Extension - Pull Request
+name: Guardoni - Pull Request
 
 on:
   pull_request:
@@ -8,10 +8,11 @@ on:
     paths:
       - "shared/**"
       - "extension/**"
+      - "guardoni/**"
 
 defaults:
   run:
-    working-directory: extension
+    working-directory: guardoni
 
 jobs:
   pull_request:
@@ -22,6 +23,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          depth: 0
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
@@ -38,11 +41,17 @@ jobs:
         run: yarn lint
 
       - name: Build shared
-        working-directory: ./shared
-        run: yarn build
+        working-directory: ./
+        run: yarn shared build
+
+      - name: Build extension for guardoni
+        working-directory: ./extension
+        run: |
+          yarn build
+          yarn dist:guardoni
 
       - name: Build
         run: yarn build
 
-      - name: Pack
-        run: yarn pack
+      - name: Package
+        run: yarn pkg
