fix: defined summary queries for tik tok

--- a/packages/taboule/tsconfig.json
+++ b/packages/taboule/tsconfig.json
@@ -30,11 +30,11 @@
       "@shared/*": ["../../../shared/src/*"]
     }
   },
-  "references": [{ "path": "../../shared" }],
   "include": ["./src", "./typings"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "references": [{ "path": "../../shared" }]
 }
