--- a/packages/taboule/tsconfig.json
+++ b/packages/taboule/tsconfig.json
@@ -27,7 +27,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": ["../../../shared/src/*"]
+      "@shared/*": ["../../shared/src/*"]
     }
   },
   "include": ["./src", "./typings"],
@@ -36,5 +36,5 @@
       "module": "CommonJS"
     }
   },
-  "references": [{ "path": "../../shared" }]
+  "references": [{ "path": "../shared" }]
 }
