--- a/.github/workflows/extension_pull_request.yml
+++ b/.github/workflows/extension_pull_request.yml
@@ -38,7 +38,7 @@ jobs:
         run: yarn lint
 
       - name: Build shared
-        working-directory: ./shared
+        working-directory: ./packages/shared
         run: yarn build
 
       - name: Build
