--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
     "lib": ["ESNext", "DOM"],
-    "typeRoots": ["../node_modules/@types", "./node_modules/@types"],
+    "typeRoots": ["../../node_modules/@types", "./node_modules/@types"],
     "outDir": "./build",
     "baseUrl": "./",
     "rootDir": "./src",
