--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -4,7 +4,7 @@
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "build": "tsc --build && DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
-    "build:dev": "webpack",
+    "build:dev": "DEBUG=\"*\" webpack",
     "watch": "DEBUG=\"*\" webpack --watch",
     "watch:prod": "NODE_ENV=production webpack --watch",
     "clean": "rm -rf build"
