--- a/services/tktrex/extension/tsconfig.json
+++ b/services/tktrex/extension/tsconfig.json
@@ -14,12 +14,12 @@
     "strictNullChecks": true,
     "target": "es2015",
     "paths": {
-      "@shared/*": ["../../../../shared/src/*"],
+      "@shared/*": ["../../../../packages/shared/src/*"],
       "@tktrex/*": ["../../shared/src/*"]
     }
   },
   "references": [
-    { "path": "../../../shared" },
+    { "path": "../../../packages/shared" },
     { "path": "../shared" }
   ],
   "ts-node": {
