--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -25,13 +25,9 @@
     "watch:prod": "DOTENV_CONFIG_PATH=.env.production yarn watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
-    "prepack": "yarn build",
-    "semantic-release": "semantic-release"
+    "prepack": "yarn build"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
