--- a/services/tktrex/backend/package.json
+++ b/services/tktrex/backend/package.json
@@ -4,8 +4,8 @@
   "packageManager": "yarn@3.1.1",
   "description": "tiktok.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
-    "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*\" ts-node-dev bin/server",
-    "start": "DEBUG=\"*,-body-parser:*,-express:*\" ts-node bin/server",
+    "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev bin/server",
+    "start": "DEBUG=\"*,-body-parser:*,-express:*,-send\" ts-node bin/server",
     "parserv": "DEBUG=\"*\" ts-node bin/parserv3",
     "parserv:watch": "DEBUG=\"*\" ts-node-dev bin/parserv3"
   },
