--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -7,6 +7,7 @@
     "pkg": "pkg ./package.json && sh ./bin/post-compile.sh",
     "lint": "eslint ./src",
     "format": "prettier -w ./src",
+    "test": "jest",
     "build": "webpack",
     "watch": "webpack watch",
     "dev": "electron ./reload.js",
@@ -47,6 +48,7 @@
     "electron-store": "^8.0.1",
     "fp-ts": "^2.11.6",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nconf": "^0.11.3",
@@ -82,11 +84,13 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.7",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "pkg": "^5.5.1",
     "prettier": "^2.5.1",
     "rpmbuild": "^0.0.23",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "utf-8-validate": "^5.0.7",
