--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
     "ts-endpoint": "^2.0.0",
+    "ts-endpoint-express": "^2.0.0",
     "ts-io-error": "^2.0.0",
     "typelevel-ts": "^0.4.0",
     "typescript": "^4.5.4"
