--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Build
         run: yarn guardoni build
 
+      - name: Test
+        run: yarn guardoni test --ci
+
       - name: Package
         run: yarn guardoni pkg
