--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@types/puppeteer": "^5.4.4",
-    "puppeteer": "^13.0.1"
+    "puppeteer": "^13.0.1",
+    "yargs": "^17.3.1"
   }
 }
