feat: preparing endpoints for Automation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "jest.jestCommandLine": "yarn test",
   "jest.autoRun": "off",
   "eslint.workingDirectories": ["./shared", "./backend", "./YCAI"],
-  "cSpell.words": ["guardoni"]
+  "cSpell.words": [
+    "guardoni"
+  ]
 }
