fix: automation model tuning

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -10,7 +10,10 @@
     "allowJs": true,
     "tsBuildInfoFile": "./build/.tsbuildinfo",
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react",
+    "paths": {
+      "@shared/*": ["./src/*"]
+    }
   },
   "include": ["./src"]
 }
