--- a/services/tktrex/automation/tsconfig.json
+++ b/services/tktrex/automation/tsconfig.json
@@ -24,6 +24,9 @@
     { "path": "../shared" }
   ],
   "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
     "compilerOptions": {
       "module": "CommonJS"
     }
