--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/puppeteer": "^5.4.4",
+    "csv": "^6.0.5",
     "dotenv": "^12.0.4",
     "fp-ts": "^2.11.7",
     "io-ts": "^2.2.16",
