--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -1,12 +1,13 @@
 {
   "name": "guardoni",
-  "version": "1.9.0",
+  "version": "1.9.2",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
     "clean": "rm -rf build/**",
     "pkg": "pkg ./package.json && sh ./bin/post-compile.sh",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src/**",
     "format": "prettier -w ./src",
+    "test": "jest",
     "build": "webpack",
     "watch": "webpack watch",
     "dev": "electron ./reload.js",
@@ -28,7 +29,7 @@
     "analysis"
   ],
   "author": {
-    "name": "Claudio Agosti and the TRex team",
+    "name": "The Tracking Exposed team https://tracking.exposed",
     "email": "team@tracking.exposed"
   },
   "license": "AGPL-3.0-or-later",
@@ -47,6 +48,7 @@
     "electron-store": "^8.0.1",
     "fp-ts": "^2.11.6",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nconf": "^0.11.3",
@@ -57,7 +59,8 @@
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "puppeteer-in-electron": "^3.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
@@ -67,9 +70,11 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-node-externals": "^2.5.3",
+    "@types/yargs": "^17",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "bufferutil": "^4.0.6",
+    "chalk": "^5.0.0",
     "electron": "16.0.6",
     "electron-builder": "^22.14.12",
     "electron-reloader": "^1.2.1",
@@ -79,11 +84,13 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.7",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "pkg": "^5.5.1",
     "prettier": "^2.5.1",
     "rpmbuild": "^0.0.23",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "utf-8-validate": "^5.0.7",
