ci: temporary disable of ycai release

--- a/.github/workflows/ycai_release.yml
+++ b/.github/workflows/ycai_release.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Build dashboard
         run: yarn build
 
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+      # - name: Release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: yarn ycai semantic-release
 
       - name: Deploy YCAI dashboard
         uses: burnett01/rsync-deployments@5.1
