fix: github release patterns

--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # run: yarn release-it --preRelease
-        run: yarn release-it premajor --preReleaseId=beta
+        # run: yarn release-it --ci --preRelease
+        run: yarn release-it premajor --ci --preReleaseId=beta --github.preRelease=true
