fix: extension zip location

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ycai": "yarn workspace @trex/ycai",
     "lint-staged": "lint-staged",
     "postinstall": "husky install",
-    "release-it-after-bump": "./scripts/release-it-after-bump.sh"
+    "release-it-after-bump": "sh ./scripts/release-it-after-bump.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
